Kube/template/exemple/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dc-site1
  labels:
    app: site-site1
spec:
  replicas: 2
  template:
    metadata:
      name: site-site1
      labels:
        app: site-site1
    spec:
      containers:
      - name: php-fpm-site1
        image: kube-master:5000/php-fpm
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: html-volume
          mountPath: /scripts
      - name: nginx-site1
        image: kube-master:5000/nginx
        ports:
          - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /var/lib/nginx/html
      volumes:
      - name: html-volume
        nfs:
          server: 172.17.0.6
          path: /sites/site1/
